--- a/Zoo/Zoo/Base.lproj/Main.storyboard
+++ b/Zoo/Zoo/Base.lproj/Main.storyboard
@@ -28,10 +28,10 @@
             </objects>
             <point key="canvasLocation" x="1873" y="354"/>
         </scene>
-        <!--View Controller-->
+        <!--Intro View Controller-->
         <scene sceneID="UCE-i9-UK1">
             <objects>
-                <viewController id="3Of-lw-3i3" sceneMemberID="viewController">
+                <viewController id="3Of-lw-3i3" customClass="IntroViewController" customModule="Zoo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="h0l-Gn-waw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -69,6 +69,7 @@
                         <viewLayoutGuide key="safeArea" id="Btx-lQ-lVF"/>
                     </view>
                     <connections>
+                        <outlet property="playButton" destination="6wI-bq-1hc" id="zkQ-az-rmP"/>
                         <outlet property="view" destination="6wI-bq-1hc" id="rx8-aa-gc9"/>
                     </connections>
                 </viewController>
