fix intro controller

--- a/Zoo/Zoo/Base.lproj/Main.storyboard
+++ b/Zoo/Zoo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Of-lw-3i3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UD3-zU-igA">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -29,15 +29,22 @@
             <point key="canvasLocation" x="1873" y="354"/>
         </scene>
         <!--Intro View Controller-->
-        <scene sceneID="UCE-i9-UK1">
+        <scene sceneID="KNA-rm-0e0">
             <objects>
-                <viewController id="3Of-lw-3i3" customClass="IntroViewController" customModule="Zoo" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="h0l-Gn-waw">
+                <viewController id="UD3-zU-igA" customClass="IntroViewController" customModule="Zoo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="IBa-wE-yFV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" usesAttributedText="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fYl-qw-ofg" colorLabel="IBBuiltInLabel-Green">
-                                <rect key="frame" x="57" y="363" width="261" height="210"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="Pay button" image="6f3" highlightedImage="6f3" translatesAutoresizingMaskIntoConstraints="NO" id="ht1-h3-auC">
+                                <rect key="frame" x="227" y="576" width="91" height="59"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="NO"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" usesAttributedText="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0AU-O9-0aV" colorLabel="IBBuiltInLabel-Green">
+                                <rect key="frame" x="57" y="340" width="261" height="210"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.82437400670000005" green="1" blue="0.41862978769999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <attributedString key="attributedText">
@@ -52,31 +59,21 @@
                                 </attributedString>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="6f3-2" translatesAutoresizingMaskIntoConstraints="NO" id="IcU-aF-7tI">
-                                <rect key="frame" x="16" y="89" width="343" height="190"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="6f3-2" translatesAutoresizingMaskIntoConstraints="NO" id="9VJ-KD-UON">
+                                <rect key="frame" x="16" y="109" width="343" height="190"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="Pay button" image="6f3" highlightedImage="6f3" translatesAutoresizingMaskIntoConstraints="NO" id="6wI-bq-1hc">
-                                <rect key="frame" x="227" y="596" width="91" height="59"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="NO"/>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.82437400670000005" green="1" blue="0.41862978769999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <accessibility key="accessibilityConfiguration" label="Pay button"/>
-                        <viewLayoutGuide key="safeArea" id="Btx-lQ-lVF"/>
+                        <color key="backgroundColor" red="0.81206315755844116" green="0.96149760484695435" blue="0.41975170373916626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="blz-Uj-TqE"/>
                     </view>
                     <connections>
-                        <outlet property="playButton" destination="6wI-bq-1hc" id="zkQ-az-rmP"/>
-                        <outlet property="view" destination="6wI-bq-1hc" id="rx8-aa-gc9"/>
-                        <segue destination="BYZ-38-t0r" kind="showDetail" identifier="SecondViewSegue" id="ZX9-gQ-Lzd"/>
+                        <outlet property="playButton" destination="ht1-h3-auC" id="iy4-l9-G9G"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IIZ-jC-3Ue" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dbw-ut-flN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1144.8" y="353.9730134932534"/>
+            <point key="canvasLocation" x="1090" y="357"/>
         </scene>
     </scenes>
     <resources>
