--- a/Zoo/Zoo/Base.lproj/LaunchScreen.storyboard
+++ b/Zoo/Zoo/Base.lproj/LaunchScreen.storyboard
@@ -27,7 +27,7 @@
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ipi" translatesAutoresizingMaskIntoConstraints="NO" id="BCf-La-gSc">
                                 <rect key="frame" x="34" y="288" width="301" height="245"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.82437400670000005" green="1" blue="0.41862978769999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
